# Memoria_UTFSM

./: .gitignore  CMakeCache.txt  Makefile  README.md  cmake_install.cmake  holamundo.gmf  holamundo1layer.gmf  holamundo2.gmf  holamundo4.gmf  holamundo4.vtk  holamundo5bad.gmf  holamundo5bad.vtk  holamundo5good.gmf  holamundo5good.vtk  holamundo5layer.gmf  jens_repair
cuda/: a.out  ejecutable  main.cu
data/: all_element_types.off  cs3.vtk  hex.mdl  hex.off  tetra.off
outputs/: holamundo.vtk  holamundo15layer.gmf  holamundo15layer.vtk  holamundo1layer.vtk  holamundo2.vtk  holamundo2layer.gmf  holamundo2layer.vtk  holamundo3.vtk  holamundo4.gmf  holamundo4.vtk  holamundo5bad.vtk  holamundo5good.gmf  holamundo5good.vtk  holamundo5layer.vtk
pruebas/: all_element_types.off  all_element_types.vtk  weired_wedge.off
src/: AdvancingPoint.cpp  AdvancingPoint.h  CMakeLists.txt  FaceContainer.cpp  FaceContainer.h  FacesPerNode.cpp  FacesPerNode.h  Main.cpp  Mesher.cpp  NewPointRef.cpp  NewPointRef.h  NodeProjection.cpp  NodeProjection.h  NormalRepair.cpp  NormalRepair.h  Prism2.cpp  Prism2.h  Services.h  TriMesh.cpp  TriMesh.h  memoria.cpp
